exports[`Default`] = `
<img
  alt="Image"
  className=""
  height={undefined}
  src="http://lorempixel.com/400/400/cats/"
  width={undefined} />
`;

exports[`W=40px H=40px`] = `
<img
  alt="Image"
  className=""
  height="40px"
  src="http://lorempixel.com/400/400/cats/"
  width="40px" />
`;

exports[`W=100%`] = `
<img
  alt="Image"
  className=""
  height={undefined}
  src="http://lorempixel.com/400/400/cats/"
  width="100%" />
`;

exports[`border: circle`] = `
<img
  alt="Image"
  className=""
  height={undefined}
  src="http://lorempixel.com/400/400/cats/"
  width={undefined} />
`;

exports[`border: rounded`] = `
<img
  alt="Image"
  className=""
  height={undefined}
  src="http://lorempixel.com/400/400/cats/"
  width={undefined} />
`;
